tests/paczka1/fuzzy1/82019059.err
Error in line 9: A735 A626 17,6
Error in line 10: A735 S499 23,2
Error in line 16: H73p1vRj S499 84,5
Error in line 22: uo3bFXZNDr S499 16,0
Error in line 35: k06Arg0hjNp A735 62,1
Error in line 38: k06Arg0hjNp S499 90,1
